# ai-code-reviewer

./: .gitignore  LICENSE  README.md  action.yml  main.py  pyproject.toml
.github/workflows/: example.yaml
